[Win64] '__int128_t': undeclared identifier in MediaTime.cpp https://bugs.webkit.org/show_bug.cgi?id=169123

Patch by Jer Noble <jer.noble@apple.com> on 2017-03-03
Reviewed by Alex Christensen.

Don't perform the 128-bit optimized path on Windows, where the __int128_t intrinsic isn't available.

* wtf/MediaTime.cpp:
(WTF::MediaTime::setTimeScale):



Canonical link: https://commits.webkit.org/186183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213419 268f45cc-cd09-0410-ab3c-d52691b4dbfc